[package]
name = "procman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.19", features = ["server", "http1", "tcp"] }
tokio = { version = "1.19.2", features = ["full"] }
url = "2.2.2"